--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,5 +23,8 @@ dependencies {
     implementation 'com.android.support:appcompat-v7:26.0.0-beta1'
     implementation 'com.android.support.constraint:constraint-layout:1.0.2'
     implementation 'com.android.support:design:26.1.0'
+    //implementation files('libs/CircleImageView-master/gradle/wrapper/gradle-wrapper.jar')
+    implementation 'de.hdodenhof:circleimageview:3.0.1'
+    implementation 'com.github.santalu:mask-edittext:1.0.2'
     testImplementation 'junit:junit:4.12'
 }
