--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -4,7 +4,7 @@
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/youcan1"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
@@ -19,7 +19,6 @@
         <activity android:name=".login" />
         <activity android:name=".Home" />
         <activity android:name=".signup" />
-        <activity android:name=".mypage"></activity>
     </application>
 
 </manifest>
